--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
             
             For more information about how we use cookies and how you can manage them, please read our Privacy Policy."</p>
         <div class="buttoncontainer">
-       <button class="popbutton" id="popbuttonC" onclick="internalCookie()">ACCEPT</button>
-       <button class="popbutton" type="reset" onclick="closepopup()">Decline</button>
+       <button class="popbutton" id="popbuttonC" onclick="closepopup()">ACCEPT</button>
+       <button class="popbutton" type="reset" onclick="closepopup2()">Decline</button>
       </div>
       </div>
   </div>
