--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>
 
           <div class="rme"> Remember Me:<input type="checkbox" onchange="internalCookie()"></div>
-           <button type="submit" id="subbutt" >Login</button>
+           <button type="submit" id="subbutt" onclick="onSubmitForm()" >Login</button>
 
           <h2>User Preferences Storage</h2> 
           <div class="pref">
